# practice

./: .gitignore  README.md
kotlin/Cinema Room Manager/: course-remote-info.yaml
rust/advent-of-code/advent_of_code/: Cargo.toml  Makefile
rust/advent-of-code/advent_of_code/src/: computer.rs  day_five.rs  day_four.rs  day_one.rs  day_three.rs  day_two.rs  error.rs  lib.rs  main.rs
rust/advent-of-code/advent_of_code/tests/: integration_test.rs
rust/advent-of-code/day-two/: Cargo.toml  Readme.md
rust/easy-rust-book/book/: 404.html  Chapter_0.html  Chapter_1.html  Chapter_10.html  Chapter_11.html  Chapter_12.html  Chapter_13.html  Chapter_14.html  Chapter_15.html  Chapter_16.html  Chapter_17.html  Chapter_18.html  Chapter_19.html  Chapter_2.html  Chapter_20.html  Chapter_21.html  Chapter_22.html  Chapter_23.html  Chapter_24.html  Chapter_25.html  Chapter_26.html  Chapter_27.html  Chapter_28.html  Chapter_29.html  Chapter_3.html  Chapter_30.html  Chapter_31.html  Chapter_32.html  Chapter_33.html  Chapter_34.html  Chapter_35.html  Chapter_36.html  Chapter_37.html  Chapter_38.html  Chapter_39.html  Chapter_4.html  Chapter_40.html  Chapter_41.html  Chapter_42.html  Chapter_43.html  (+34 more)
rust/easy-rust-book/src/: Chapter_0.md  Chapter_1.md  Chapter_10.md  Chapter_11.md  Chapter_12.md  Chapter_13.md  Chapter_14.md  Chapter_15.md  Chapter_16.md  Chapter_17.md  Chapter_18.md  Chapter_19.md  Chapter_2.md  Chapter_20.md  Chapter_21.md  Chapter_22.md  Chapter_23.md  Chapter_24.md  Chapter_25.md  Chapter_26.md  Chapter_3.md  (+49 more)
src/: main.rs
typescript/typescript-app/: package.json
(+66 files in other folders)
