[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["edcompton <edmund.compton@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmath = "0.2.1"
structopt = "0.3.20"
enum_derive = "0.1.7"
custom_derive = "0.1.7"
differ = "1"
